apps/hello/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: registry.localhost:5000/hello:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /v1/readyz
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/livez
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /v1/livez
              port: 9000
            failureThreshold: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 10Mi
...
