apps/hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: apps
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 9000
...
